[package]
name = "oclc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
reqwest = { version = "0.11.10", default-features = false }
serde-xml-rs = "0.5.1"
serde = {version = "1.0.137", features = ["derive"] }
log = "0.4.17"
tokio = {version = "1.19.2", features = ["macros"] }
tower = {version = "0.4.12", features = ["full"] }
hyper = "0.14.19"
