[package]
name = "oclc"
description = "client library to http://classify.oclc.org/classify2/ webservice"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.57"
reqwest = { version = "0.11.10", default-features = false }
serde-xml-rs = "0.6.0"
serde = {version = "1.0.137", features = ["derive"] }
log = "0.4.17"
tokio = {version = "1.19.2", features = ["macros"] }
tower = {version = "0.4.12", features = ["full"] }
hyper = "1.0.1"
thiserror = "1.0"
